@@ -1,3 +1,8 @@
+1999-01-20  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.11
+
+	* ObjScanner.pm: removed dependance on Tk::Multi, better doc,
+          don't wrap lines in Text widget.
+
 v0.5: 1998-08-18  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* ObjScanner.pm: simplified and adapted for new Multi::Text
